tests/computed_getters_setters/computed_getters_setters.exp
Error ---------------------------------------------------------------------------------- computed_getters_setters.js:6:3

Computed getters and setters are not yet supported. [unsupported-syntax]

   6|   get ['d']() { return 'foo'; },
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- computed_getters_setters.js:7:3

Computed getters and setters are not yet supported. [unsupported-syntax]

   7|   set ['d'](x: number) {},
        ^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- computed_getters_setters.js:13:8

Unsupported computed key. Computed keys are only supported on class fields and methods, and must resolve to a single
string or number literal. [illegal-key]

   13|   get ['d']() { return 'foo'; }
              ^^^


Error --------------------------------------------------------------------------------- computed_getters_setters.js:14:8

Unsupported computed key. Computed keys are only supported on class fields and methods, and must resolve to a single
string or number literal. [illegal-key]

   14|   set ['d'](x: number) {}
              ^^^



Found 4 errors
